--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "personal-github",
   "version": "1.0.0",
-  "description": "",
+  "description": "Your own Personal Github (TM)",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=test HOST=localhost PORT=8000 node server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=test HOST=localhost PORT=8000 node server"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "combynexpress": "^0.6.3",
     "express": "^4.12.3",
+    "homedir": "^0.6.0",
+    "lodash": "^3.6.0",
     "nodegit": "^0.3.3",
-    "promisify-node": "^0.1.5"
+    "highlight.js": "^8.4.0",
+    "remarkable": "^1.6.0"
   },
   "dependencies": {
-    "amd.js": "git://github.com/tbranyen/amd.js",
-    "angular": "^1.3.15",
-    "angular-winjs": "^2.0.0",
-    "winjs": "^3.0.1"
+    "amd.js": "tbranyen/amd.js",
+    "combyne-amd-loader": "tbranyen/combyne-amd-loader",
+    "blueimp-md5": "^1.1.0",
+    "combyne": "^0.6.5",
+    "moment": "^2.9.0",
+    "octicons": "^2.2.0",
+    "primer": "primer/primer"
+  },
+  "paths": {
+    "html": "combyne-amd-loader"
   }
 }
