--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "blueimp-md5": "^1.1.0",
     "combyne": "^0.6.5",
     "combyne-amd-loader": "tbranyen/combyne-amd-loader",
+    "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "octicons": "^2.2.0",
     "primer": "primer/primer",
@@ -31,7 +32,12 @@
     "html": "combyne-amd-loader"
   },
   "shim": {
-    "timelinejs/build/js/storyjs-embed": ["jquery"],
-    "timelinejs": ["jquery", "timelinejs/build/js/storyjs-embed"]
+    "timelinejs/build/js/storyjs-embed": [
+      "jquery"
+    ],
+    "timelinejs": [
+      "jquery",
+      "timelinejs/build/js/storyjs-embed"
+    ]
   }
 }
