--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Local hub of Git repositories",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=test HOST=localhost PORT=8000 node server"
+    "start": "NODE_ENV=test node server"
   },
   "author": "",
   "license": "MIT",
