--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "homedir": "^0.6.0",
     "lodash": "^3.6.0",
     "nodegit": "^0.3.3",
+    "peer": "^0.2.8",
     "remarkable": "^1.6.0"
   },
   "dependencies": {
@@ -25,6 +26,7 @@
     "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "octicons": "^2.2.0",
+    "peerjs": "^0.3.14",
     "primer": "primer/primer",
     "timelinejs": "^2.35.6"
   },
@@ -32,6 +34,10 @@
     "html": "combyne-amd-loader"
   },
   "shim": {
+    "peerjs/dist/peer": {
+      "exports": "Peer"
+    },
+
     "timelinejs/build/js/storyjs-embed": [
       "jquery"
     ],
