--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "dependencies": {
     "amd.js": "tbranyen/amd.js",
     "blueimp-md5": "^1.1.0",
+    "bootstrap-social": "^4.8.0",
     "combyne": "^0.6.5",
     "combyne-amd-loader": "tbranyen/combyne-amd-loader",
+    "font-awesome": "^4.3.0",
     "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "octicons": "^2.2.0",
@@ -37,7 +39,6 @@
     "peerjs/dist/peer": {
       "exports": "Peer"
     },
-
     "timelinejs/build/js/storyjs-embed": [
       "jquery"
     ],
