--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "combyne": "^0.6.5",
     "combyne-amd-loader": "tbranyen/combyne-amd-loader",
     "font-awesome": "^4.3.0",
+    "github-markdown-css": "^2.0.7",
     "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "octicons": "^2.2.0",
