--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "highlight.js": "^8.5.0",
     "homedir": "^0.6.0",
     "lodash": "^3.6.0",
-    "nodegit": "^0.3.3",
+    "nodegit": "^0.4.0",
     "peer": "^0.2.8",
     "remarkable": "^1.6.0"
   },
@@ -24,6 +24,7 @@
     "bootstrap-social": "^4.8.0",
     "combyne": "^0.6.5",
     "combyne-amd-loader": "tbranyen/combyne-amd-loader",
+    "diffhtml": "^0.0.3",
     "font-awesome": "^4.3.0",
     "github-markdown-css": "^2.0.7",
     "jquery": "^2.1.3",
@@ -31,7 +32,8 @@
     "octicons": "^2.2.0",
     "peerjs": "^0.3.14",
     "primer": "primer/primer",
-    "timelinejs": "^2.35.6"
+    "timelinejs": "^2.35.6",
+    "webapp": "webapp/library"
   },
   "extensions": {
     "html": "combyne-amd-loader"
@@ -47,5 +49,8 @@
       "jquery",
       "timelinejs/build/js/storyjs-embed"
     ]
+  },
+  "combyneLoader": {
+    "root": "/views"
   }
 }
