--- a/package.json
+++ b/package.json
@@ -4,53 +4,43 @@
   "description": "Local hub of Git repositories",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=test node server"
+    "start": "NODE_ENV=test node server",
+    "build": "npm run browserify",
+    "browserify": "browserify lib/index.js -o dist/localhub.js",
+    "watchify": "watchify -d lib/index.js -o dist/localhub.js -v"
   },
-  "author": "",
+  "author": "Tim Branyen (@tbranyen)",
   "license": "MIT",
   "devDependencies": {
-    "combynexpress": "^0.6.3",
+    "babelify": "^6.3.0",
+    "browserify": "^11.1.0",
+    "combynexpress": "^2.0.0",
+    "combynify": "^2.0.1",
     "express": "^4.12.3",
+    "express-livereload": "0.0.24",
     "highlight.js": "^8.5.0",
     "homedir": "^0.6.0",
+    "livereload": "napcs/node-livereload",
     "lodash": "^3.6.0",
     "nodegit": "^0.4.0",
-    "peer": "^0.2.8",
-    "remarkable": "^1.6.0"
+    "remarkable": "^1.6.0",
+    "watchify": "^3.4.0"
   },
   "dependencies": {
-    "amd.js": "tbranyen/amd.js",
     "blueimp-md5": "^1.1.0",
     "bootstrap-social": "^4.8.0",
-    "combyne": "^0.6.5",
-    "combyne-amd-loader": "tbranyen/combyne-amd-loader",
-    "diffhtml": "^0.0.3",
     "font-awesome": "^4.3.0",
     "github-markdown-css": "^2.0.7",
     "jquery": "^2.1.3",
     "moment": "^2.9.0",
     "octicons": "^2.2.0",
-    "peerjs": "^0.3.14",
-    "primer": "primer/primer",
-    "timelinejs": "^2.35.6",
+    "primer-css": "primer/primer",
     "webapp": "webapp/library"
   },
-  "extensions": {
-    "html": "combyne-amd-loader"
-  },
-  "shim": {
-    "peerjs/dist/peer": {
-      "exports": "Peer"
-    },
-    "timelinejs/build/js/storyjs-embed": [
-      "jquery"
-    ],
-    "timelinejs": [
-      "jquery",
-      "timelinejs/build/js/storyjs-embed"
+  "browserify": {
+    "transform": [
+      "babelify",
+      "combynify"
     ]
-  },
-  "combyneLoader": {
-    "root": "/views"
   }
 }
