Lots of fixes, save spot

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=test node server",
+    "cleancss": "cleancss client/index.css -o dist/localhub.css",
     "build": "npm run browserify",
     "browserify": "browserify client/index.js -o dist/localhub.js",
     "watchify": "watchify -d client/index.js -o dist/localhub.js -v"
@@ -16,24 +17,24 @@
     "browserify": "^11.1.0",
     "combynexpress": "^2.0.0",
     "combynify": "^2.0.1",
-    "express": "^4.12.3",
-    "express-livereload": "0.0.24",
-    "highlight.js": "^8.5.0",
+    "express": "^4.13.3",
+    "express-livereload": "^0.0.24",
+    "highlight.js": "^8.8.0",
     "homedir": "^0.6.0",
     "livereload": "napcs/node-livereload",
-    "lodash": "^3.6.0",
-    "nodegit": "^0.4.0",
+    "lodash": "^3.10.1",
+    "nodegit": "^0.4.1",
     "remarkable": "^1.6.0",
     "watchify": "^3.4.0"
   },
   "dependencies": {
-    "blueimp-md5": "^1.1.0",
-    "bootstrap-social": "^4.8.0",
-    "font-awesome": "^4.3.0",
-    "github-markdown-css": "^2.0.7",
-    "jquery": "^2.1.3",
-    "moment": "^2.9.0",
-    "octicons": "^2.2.0",
+    "blueimp-md5": "^1.1.1",
+    "bootstrap-social": "^4.9.1",
+    "font-awesome": "^4.4.0",
+    "github-markdown-css": "^2.0.10",
+    "jquery": "^2.1.4",
+    "moment": "^2.10.6",
+    "octicons": "^2.4.1",
     "primer-css": "primer/primer",
     "webapp": "webapp/library"
   },
