Big commit that fixes some bugs, breaks a lot
Lots of work with Falcor and refactoring to make the application easier
to reason about.

There is a lot of breakage since the source is in flux.

--- a/package.json
+++ b/package.json
@@ -4,21 +4,24 @@
   "description": "Local hub of Git repositories",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=test node server",
+    "start": "node server",
+    "build": "npm run cleancss && npm run browserify",
+    "watch": "npm run watchify",
     "cleancss": "cleancss client/index.css -o dist/localhub.css",
-    "build": "npm run browserify",
     "browserify": "browserify client/index.js -o dist/localhub.js",
     "watchify": "watchify -d client/index.js -o dist/localhub.js -v"
   },
   "author": "Tim Branyen (@tbranyen)",
+  "repository": "https://github.com/tbranyen/localhub",
   "license": "MIT",
   "devDependencies": {
     "babelify": "^6.3.0",
-    "browserify": "^11.1.0",
+    "browserify": "^11.2.0",
     "combynexpress": "^2.0.0",
     "combynify": "^2.0.1",
     "express": "^4.13.3",
     "express-livereload": "^0.0.24",
+    "falcor-express": "^0.1.2",
     "highlight.js": "^8.8.0",
     "homedir": "^0.6.0",
     "livereload": "napcs/node-livereload",
@@ -30,11 +33,15 @@
   "dependencies": {
     "blueimp-md5": "^1.1.1",
     "bootstrap-social": "^4.9.1",
+    "falcor": "^0.1.13",
+    "falcor-http-datasource": "^0.1.2",
+    "falcor-json-graph": "^2.0.0",
+    "falcor-router": "^0.2.9",
     "font-awesome": "^4.4.0",
-    "github-markdown-css": "^2.0.10",
+    "github-markdown-css": "^2.0.11",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
-    "octicons": "^2.4.1",
+    "octicons": "^3.1.0",
     "primer-css": "primer/primer",
     "webapp": "webapp/library"
   },
